--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: debug
-on: 
-  watch:
-    types: started
+on: push
+  #watch:
+    #types: started
 jobs:
   build:
     runs-on: ubuntu-20.04
