--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - ".github/workflows/blank.yml"
   #watch:
-    #types: started
+    ##types: started
 jobs:
   build:
     runs-on: ubuntu-20.04
